macros/tests/compile-fail/to_glue_row_tuple_struct.rs
use gluesql_macros::ToGlueRow;

#[derive(ToGlueRow)]
struct T(i32);
